2007-06-19  Anders Carlsson  <andersca@apple.com>

        Reviewed by Kevin Decker.

        <rdar://problem/5266289> REGRESSION (Safari 3 Beta 1): Incoming iChat messages are delayed
        
        Add a new m_deferMainResourceDataLoad that can be used to control whether a data load should be deferred using a timer or not.
        
        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::DocumentLoader):
        * loader/DocumentLoader.h:
        (WebCore::DocumentLoader::deferMainResourceDataLoad):
        * loader/MainResourceLoader.cpp:
        (WebCore::MainResourceLoader::handleDataLoadSoon):
        (WebCore::MainResourceLoader::loadNow):
        (WebCore::MainResourceLoader::setDefersLoading):

2007-06-19  Patti Hoa <patti@apple.com>

        Reviewed by Justin Garcia.
        
        <rdar://problem/5237325> Incorrect AXLeftLineTextMarkerRangeForTextMarker/AXPreviousLineStartTextMarkerForTextMarker for non-editable text
        
        * editing/visible_units.cpp:
        (WebCore::startPositionForLine):
        (WebCore::startOfLine):
        (WebCore::endPositionForLine):
        (WebCore::endOfLine):
        Break down the line routines to allow another try to ask for start/end of line if the returned position is not valid.
        An example would be when lineStart/lineEnd at different line than the input position.
        This can happen if the input position is before the space character at the end of a soft-wrapped non-editable line, 
        specifically a line without webkit-line-break:after-white-space style.

2007-06-19  Patti Hoa  <patti@apple.com>

        Reviewed by Justin Garcia.
        
        <rdar://problem/3992645> VO view bounds misplaced when reading text after a line wrap
        
        * bridge/mac/WebCoreAXObject.mm:
        (-[WebCoreAXObject doAXBoundsForTextMarkerRange:]):
        Improve the accuracy of the bounds for a given range
        
2007-06-19  Anders Carlsson  <andersca@apple.com>
